src/app/pages/user/view-user/user-profile/user-profile.component.scss
:host {
  margin-top: 2rem;
  display: grid;
  grid-template-columns: 1fr;

  @media (min-width: 60rem) {
    grid-template-columns: 1fr 1fr;
  }
}

.avatar {
  display: block;
  width: 100%;
  height: 100%;

  object-fit: cover;

  border-radius: 50%;
  box-shadow: 0 0 10px rgba(black, 0.5);
}

.avatar-wrapper {
  position: relative;

  padding: 1rem;
  margin: 0 auto;

  max-height: 50rem;
  max-width: 50rem;

  // square
  &::after {
    content: "";
    padding-bottom: 100%;
    display: block;
  }
}

.edit-user-under-avatar {
  position: absolute;
  top: 3%;
  right: 15%;
}

.about {
  margin-top: 1rem;
}

